--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/qunit": "^2.9.0",
     "@types/string-width": "^4.0.1",
     "@types/strip-ansi": "^5.2.1",
+    "@types/supports-color": "^5.3.0",
     "concurrently": "^5.0.0",
     "nodemon": "^1.19.4",
     "qunit": "^2.9.3",
@@ -55,6 +56,7 @@
     "power-assert-util-string-width": "^1.2.0",
     "string-width": "^4.1.0",
     "strip-ansi": "^5.2.0",
+    "supports-color": "^7.1.0",
     "yargs": "^14.2.0"
   }
 }
