--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -14,6 +14,7 @@ jobs:
           node-version: 12
       - run: curl https://get.volta.sh | bash
       - run: yarn
+      - run: yarn build
       - run: yarn test
         env:
           CI: true
