--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-          scope: "@mike-north"
+          scope: "@cli-utils"
           access: public
       - run: yarn
       - run: yarn build
@@ -50,6 +50,7 @@ jobs:
           access: public
       - run: yarn
       - run: yarn build
-      - run: npm publish
+      - run: echo "//npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN" > .npmrc
+      - run: npm publish --registry=https://npm.pkg.github.com
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
